--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 <body>
 <h1>Hello world!</h1>
 <p>This is my product details page</p>
+
+
+<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
