--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Product details</title>
 </head>
 <body>
-<h1>Hello world!</h1>
+<image src="" id="product-image" />
 <p>This is my product details page</p>
 
 
