Update name and price

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 </head>
 <body>
 <image src="" id="product-image" />
+<h2 id="product-name"></h2>
+<p id="product-price">
+    <span id="current-price"></span>
+    <span id="price-saving"></span>
+    <span id="previous-price"></span>
+</p>
 <p>This is my product details page</p>
 
 
