Display selected color and colors

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="app.css" />
     <title>Product details</title>
 </head>
 <body>
@@ -11,6 +12,8 @@
     <span id="price-saving"></span>
     <span id="previous-price"></span>
 </p>
+<p id="product-selected-color">Selected colour:</p>
+<ul id="product-colors"></ul>
 <p>This is my product details page</p>
 
 
