--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 </p>
 <p id="product-selected-color">Selected colour:</p>
 <ul id="product-colors"></ul>
+<div id="product-size-wrapper">
+    <p>Select size:</p>
+    <select id="product-size"></select>
+</div>
 <p>This is my product details page</p>
 
 
