--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <p>Select size:</p>
     <select id="product-size"></select>
 </div>
+<div id="product-qty-wrapper">
+    <p>Qty:</p>
+    <select id="product-qty"></select>
+</div>
 <p>This is my product details page</p>
 
 
