--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <p>Qty:</p>
     <select id="product-qty"></select>
 </div>
-<p>This is my product details page</p>
+
+<button role="button">Add to bag</button>
+
+<div id="product-info"></div>
 
 
 <script type="text/javascript" src="app.js"></script>
