--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             <ul id="product-colors"></ul>
             <div id="product-size-wrapper">
                 <p>Select size:</p>
-                <select id="product-size"></select>
+                <select id="product-size" class="custom-select"></select>
             </div>
             <div id="product-qty-wrapper">
                 <p>Qty:</p>
-                <select id="product-qty"></select>
+                <select id="product-qty" class="custom-select"></select>
             </div>
 
-            <button role="button">Add to bag</button>
+            <button role="button" id="submit-button" class="btn btn-lg btn-block">Add to bag</button>
 
             <div id="product-info"></div>
         </div>
