Code tidy up and change variant on size select

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="col-lg-4">
                     <div id="product-size-wrapper">
                         <p>Select size: <span></span></p>
-                        <select id="product-size" class="custom-select"></select>
+                        <select id="product-size" class="custom-select" onchange="updateVariantBySize(this)"></select>
                     </div>
                 </div>
             </div>
