Further clean up and select qty

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div id="size-submit-wrapper">
                 <div id="product-qty-wrapper">
                     <p>Qty:</p>
-                    <select id="product-qty" class="custom-select"></select>
+                    <select id="product-qty" class="custom-select" onchange="updateQty(this)"></select>
                 </div>
 
 
